インターンシップ作業分

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 </head>
 
 <body>
-
   <header class="header">
         <a class="logo" href="#"><img src="./images/logo.png" alt="moneyly"></a>
         <a class="nav-item" href="#about">概要</a>
@@ -21,13 +20,22 @@
         <a class="nav-item" href="#security">セキュリティ</a>
         <a class="nav-item" href="#flow">導入までの流れ</a>
         <a class="nav-item" href="#faq">FAQ</a>
+        <a class="nav-item" href="./request.html#request-button">資料請求</a>　<!--資料請求のタグ追加-->
+        
         <!-- TODO -->
   </header>
 
 <!-- TODO -->
 
+
+<div class="catch"><!--キャッチコピーの追加-->
+  <img src="./images/housewise.png" alt="housewise">
+<h2 class="heading">
+  <u>誰でもスマホ一つで簡単投資</u></h2>
+</div>
+
   <section class="about" id="about">
-    <h2 class="heading">What's moneyly</h2>
+    <h2>What's moneyly</h2>
     <div class="about-container">
     <div class="about-item">
       <h3>
@@ -46,6 +54,7 @@
     </div>
   </div> 
   </section>
+
 
   <section class="merit" id="merit">
     <h2 class="heading">導入メリット</h2>
@@ -142,7 +151,7 @@
     </div>
   </section>
 
-  <div class="request-button">
+  <div class="request-button" id="request-button"><!--idの追加-->
     <a href="./request.html">▶資料請求はこちらから</a>
   </div>
 
