--- a/request.html
+++ b/request.html
@@ -23,6 +23,8 @@
       <a class="nav-item" href="./index.html#security">セキュリティ</a>
       <a class="nav-item" href="./index.html#flow">導入までの流れ</a>
       <a class="nav-item" href="./index.html#faq">FAQ</a>
+      <a class="nav-item" href="#request-button">資料請求</a>　<!--資料請求のタグ追加-->
+
 </header>
   </header>
   <section class="request">
